--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/verify.mjs && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,4 +20,5 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.2"
   }
+
 }
